--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,10 @@
 steps:
 
-- name: "gcr.io/cloud-builders/kubectl"
-  id: deploy
+- name: 'gcr.io/cloud-builders/kubectl'
+  id: Deploy
   args:
   - 'apply'
-  - 'f'
+  - '- f'
   - 'kube-deployment.yml'
 
   env:
